methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:7: error: value Red is not a member of object java.awt.Color
  faireV(Color.Red)
               ^MethodsPicture:8: error: value Blue is not a member of object java.awt.Color
  faireV(Color.Blue)
               ^MethodsPicture:9: error: value Green is not a member of object java.awt.Color
  faireV(Color.Green)
               ^